[package]
name = "layer7benchmark"
version = "0.3.0"
edition = "2021"
description = "A simple benchmark tool for Layer 7 (HTTP) load testing"
license = "MIT"
authors = ["shinnku nikaidou <nikaidou@shinnku.com>"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
openssl = { version = "0.10", features = ["vendored"] }
hyper = { version = "1.6", features = ["full"] }
crossterm = { version = "0.29.0" }
