[package]
name = "layer7benchmark"
version = "0.4.0"
edition = "2021"
description = "A simple benchmark tool for Layer 7 (HTTP) load testing"
license = "MIT"
authors = ["shinnku nikaidou <nikaidou@shinnku.com>"]

[dependencies]
anyhow = "1.0.98"
url = "2.5.4"
http = "1.3.1"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "time", "sync"] }
hickory-resolver = "0.25.2"
reqwest = "0.12.15"
