[package]
name = "layer7benchmark"
version = "3.1.1"
edition = "2024"
description = "A simple benchmark tool for Layer 7 (HTTP) load testing"
license = "MIT"
authors = ["shinnku nikaidou <nikaidou@shinnku.com>"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
thiserror = "2.0.12"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = [
    "json",
    "deflate",
    "gzip",
    "stream",
    "socks",
    "native-tls",
    "blocking",
    "cookies",
    "native-tls-vendored",
    "native-tls-alpn",
] }
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
hyper = { version = "1.6", features = ["full"] }
crossterm = { version = "0.29.0" }
native-tls = "0.2.14"
log = "0.4.27"
env_logger = "0.11.8"
futures-util = "0.3.31"
byte-unit = "5.1.6"
regex = "1.11.1"
tokio-tungstenite = "0.26.2"

tonic = "0.13.1"
prost = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"

[build-dependencies]
tonic-build = "0.13.1"
